# rust-dlg

./: Cargo.toml  LICENCE-MIT  LICENSE-APACHE  README.md  SYNTAX.md
.github/workflows/: ci.yml
assets/: alice-and-bob.dlg
dlg/: Cargo.toml
dlg-debugger/: Cargo.toml
dlg-debugger/src/: main.rs
dlg/src/: lib.rs  prelude.rs
dlg/src/parser/: mod.rs  section.rs  tokens.rs
dlg/src/player/: cursor.rs  mod.rs
examples/console_player/: Cargo.toml
examples/console_player/src/: main.rs
src/: main.rs
tests/: all_dialog_features.rs  basic_dialog.rs  macro.rs  mentions.rs  menu.rs  texts.rs
