[package]
name = "dlg"
version = "0.1.0"
edition = "2021"
authors = ["SDesya74 <sdesya74@gmail.com>"]
categories = ["encoding"]
description = "A library for parsing .dlg files"
keywords = ["dlg", "dialogue"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hpmor-game/rust-dlg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
common_macros = "0.1.1"        # TODO: remove this by sections macro
logos = "0.12.1"
